fix (block background): fix inner block content alignment by setting a default max-width for ie11. Closes #137

--- a/src/modules/block-background/style.scss
+++ b/src/modules/block-background/style.scss
@@ -11,6 +11,7 @@
 	&.ugb-main-block--inner-center {
 		@media screen and (min-width: $break-large) {
 			.ugb-inner-block {
+				max-width: 580px;
 				max-width: var(--content-width);
 			}
 		}
